adds logo and site name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link
       rel="icon"
-      type="image/svg+xml"
-      href="/vite.svg"
+      type="image/png"
+      href="/site-logo.png"
     />
     <meta
       name="viewport"
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="./src/styles/tailwind.css"
     />
-    <title>Vite + React + TS</title>
+    <title>Solomon Schuster</title>
   </head>
   <body>
     <div id="root"></div>
